<resources>

    <!-- Application general strings -->
    <string name="app_name">ActivityMatch</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="company_mail">activitymatch.suport@gmail.com</string>
    <string name="share_text">Hi! Whatsup? Do you want to check out what kind of activities are available nearby you? Take a look at ActivityMatch! http://activitymatch.azurewebsites.net</string>
    <string name="web_client_id">431266647672-cjab4sklue3hi342jko98a3bvcii8mnc.apps.googleusercontent.com</string>
    <string name="commaSpace">,\u0020</string>
    <string name="beginParagraph">   </string>
    <string name="emptyString">""</string>
    <string name="timeStart">Starts: %1$s</string>
    <string name="timeEnd">Ends: %1$s</string>



    <!-- Welcome Activity navigation Drawer strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_activity">Organize your activity</string>
    <string name="log_out">Log out</string>
    <string name="user_profile">User profile</string>
    <string name="sign_up">Sign up</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_message">Choose an Email client</string>
    <string name="show_activity_button">Show all activities</string>
    <string name="communicate">Communicate</string>

    <!-- Welcome Activity interface -->
    <string name="display_activities">Display Activities</string>
    <string name="user_greeting_welcome">Hi bro, welcome in ActivityMatch!</string>
    <string name="display_activities_button">Display All Events</string>
    <string name="filter_button_text">Filter the events</string>
    <string name="create_activity_button_text">Organize yours!</string>
    <string name="no_internet_connection">No internet connection</string>


    <!-- Create Activity -->
    <string name="create_activity_title_bar">Event organizer</string>
    <string name="create_activity_title">Organize your event</string>
    <string name="create_activity_name_hint">The title of your event</string>
    <string name="create_activity_category">Category</string>
    <string name="create_activity_description_hint">Give details about yours event</string>
    <string name="create_activity_confirmation_message">Event successfully created</string>
    <string name="create_activity_no_connection">No Internet connection</string>
    <string name="create_activity_name_textView">Name</string>
    <string name="create_activity_description_textView">Description</string>

    <string name="create_activity_starting_time_textView">Starts </string>
    <string name="create_activity_ending_time_textView">Ends </string>
    <string name="create_activity_create_activity_button">Create event</string>
    <string name="modifyButtonText">Modify activity</string>
    <string name="create_activity_maximum_number_of_participants">Maximum number of participants (optional)</string>

    <string name="create_activity_set_location">Choose location</string>
    <string name="create_activity_category_text">%1$s Event</string>
    <string name="create_activity_upload_image">Upload Image</string>
    <string name="create_activity_header">Event\'s Organizer</string>

    <string name="create_activity_invalid_category">Invalid category</string>
    <string name="create_activity_date_error_message">Invalid dates and/or time</string>
    <string name="create_activity_location_error_message">Please select a location</string>
    <string name="create_activity_category_error_message">Please select a category</string>
    <string name="create_activity_missing_field_error_message">Missing required field informations</string>
    <string name="create_activity_invalid_max_number_participants">The maximum number of participants is invalid. Please select a number smaller than a thousand or leave the field empty if you don\'t want to have a maximum.</string>
    <string name="create_activity_unknown_error_message">Unknown error</string>

    <string name="modify_activity_title">Edit your activity : \nChoose a title and describe it</string>
    <string name="modify_activity_set_location">Change location</string>
    <string name="modify_activity_modify_activity_button">Modify activity</string>


    <!-- Create Activity Validation Fragment -->
    <string name="creation_validation_text">Uploading in progress&#8230;</string>
    <string name="creation_validation_complete_text">Uploading completed</string>
    <string name="creation_validation_button_text">OK</string>
    <string name="creation_rate_text"></string>



    <!-- User Image Fragment -->
    <string name="user_image_ok">OK</string>
    <string name="user_image_edit">Edit</string>


    <!-- Display Activity -->
    <string name="display_activity_title_bar">Activity details</string>
    <string name="organizer_button">Check out organizer\'s profile</string>

    <string name="user_signature">Published by\u0020@</string>
    <string name="occupancy">Participants: %1$d</string>
    <string name="occupancy_with_max">Participants: %1$d/%2$d</string>
    <string name="invalid_occupancy">Invalid information about participants</string>
    <string name="already_enrolled">You have already join this Event</string>
    <string name="no_enrolled_free_place">You can join this event</string>
    <string name="no_enrolled_full">Sorry this event is full</string>
    <string name="must_be_rank">Please rank this event</string>
    <string name="already_rank">You have already ranked this event</string>
    <string name="activity_past">This event has past you cannot joint it!</string>
    <string name="you_are_organizer">This event is organised by yourself. You are automatically counted in participants</string>


    
    <!-- Login -->
    <string name="sign_out">Sign out</string>
    <string name="unlogged_user">unlogged_user</string>






    <!-- Join activity -->
    <string name="joinActivity_button">Join this activity</string>
    <string name="leaveActivity_button">Leave this activity</string>
    <string name="joinActivity_satus">Current Stat is loading  ... </string>
    <string name="toast_success_join">You have successfully joined this activity</string>
    <string name="toast_fail_join_full">You don\'t joint this activity</string>
    <string name="toast_fail_join">Something wrong with network.. Try again in few seconds </string>
    <string name="rateButton">Rate me NOW !</string>

    <!-- Fragment Filter -->
    <string name="hello_fragment">hello fragment</string>
    <string name="no_results_found">No results found</string>
    <string name="event_filter_title">Filter events</string>
    <string name="event_filter_description">Choose your category:</string>
    <string name="validate">Validate</string>
    <string name="filter_change_your_location">Change your location</string>
    <string name="filter_choose_the_maximum_distance_of_the_activities">Set the maximum distance:</string>
    <string name="filter_from">From:</string>
    <string name="filter_until">Until:</string>
    <string name="filter_change_your_time_interval_of_interest">Change your time interval of interest:</string>
    <string-array name="max_distance_array">
        <item>All</item>
        <item>1 km</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>20 km</item>
        <item>50 km</item>
    </string-array>
    <string name="gps_is_disabled">GPS is disabled</string>
    <string name="filter_enable_gps">Enable GPS</string>
    <string name="close">Close</string>

    <!-- Fragment Rating -->
    <string name="event_rating_title">Rate the event!</string>
    <string name="event_rating_comment_hint">Write your comment here..</string>
    <string name="event_rating_button">Rate it!</string>


    <!-- For test/development -->
    <string name="test_text">test</string>

    <!-- User Profile -->

    <string-array name="user_info">
        <item>Organised</item>
        <item>Participated</item>
        <item>Interested</item>
    </string-array>
    <string name="comment_field">Comments</string>
    <string name="to_rank_events">Events to rank</string>
    <string name="past_organised_events">Past organized Events</string>
    <string name="organised_events">Upcoming organized Events</string>
    <string name="participated_events">Participated Events</string>
    <string name="interested_events">Upcoming Events</string>
    <string name="no_events">No Events</string>
    <string name="rank_text">Your ranking:</string>
    <string name="select_category_hint">Select category</string>
    <string name="pick_image_intent_text">text</string>
    <string name="header_user_comments">Comments of participants of the past organized events:</string>
    <string name="rate_event_comments">Rate %1$s out of 5</string>
    <string name="search">Search</string>


</resources>
