<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/create_activity" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"
                android:actionProviderClass=
                    "android.widget.ShareActionProvider" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
