<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.project.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:weightSum="1">

        <TextView
            android:text="@string/create_activity_title"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/create_activity_name_hint"
            android:ems="10"
            android:background="#EEE"
            android:id="@+id/editText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/create_activity_description_hint"
            android:ems="10"
            android:background="#EEE"
            android:id="@+id/edActivityDescription" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showStartDatePickerDialog"
            android:id="@+id/startDateTextView" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showStartTimePickerDialog"
            android:id="@+id/startTimeTextView" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showEndDatePickerDialog"
            android:id="@+id/endDateTextView" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showEndTimePickerDialog"
            android:id="@+id/endTimeTextView" />

    </LinearLayout>
</RelativeLayout>
